<resources>
    <string name="app_name">Shipper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_home">Home</string>
    <string name="nav_request">Request</string>
    <string name="nav_response">Response</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_share">Share</string>
    <string name="nav_info">About</string>
    <string name="nav_help">Help</string>
    <string name="nav_message">Message</string>
    <string name="nav_notification">Thông báo</string>
    <string name="nav_logout">Đăng xuất</string>

    <!--Home activity-->
    <string name="sign_up_as_shipper">Đăng ký đối với shipper</string>
    <string name="sign_up_as_store">Đăng ký đối với cửa hàng</string>
    <string name="or">Hoặc</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>


    <!--Service asynctask-->

    <string name="please_wait">Vui lòng chờ ....</string>


    <!--Home fragment-->

    <string name="all">Mới nhất</string>
    <string name="pending">Đang chờ</string>
    <string name="on_going">Đang thực hiện</string>
    <string name="completed">Đã hoàn thành</string>

    <!--Login activity-->
    <string name="login_as">Đăng nhập với tư cách</string>
    <string name="register_as_store">Đăng ký cửa hàng</string>
    <string name="register_as_shipper">Đăng ký shipper</string>

    <!--Register activity-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="store_name">Tên cửa hàng: </string>
    <string name="store_type">Loại cửa hàng</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="number_and_street">Số nhà và tên đường phố</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="name">Họ và tên</string>
    <string name="phonenumber">Số điện thoại</string>
    <string name="date_of_birth">Ngày tháng năm sinh</string>
    <string name="address">Địa chỉ </string>


    <!-- -->
    <string name="ok">Đồng ý</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="turn_on_gps">Chức năng này cần bật GPS, bạn có muốn bật GPS ?</string>
    <string name="internet_no_available">Thiết bị của bạn đang ngoại tuyến, hãy bật wifi hoặc dữ liệu di động để tải dữ liệu.</string>
    <string name="gps">GPS</string>

    <string-array name="roles">
        <item>Shipper</item>
        <item>Cửa hàng</item>
    </string-array>

    <string-array name="cities_in_viet_nam">
        <item>Hà Nội</item>
        <item>TP Hồ Chí Minh</item>
    </string-array>
    <string-array name="countries">
        <item>Việt Nam</item>
    </string-array>
    <string-array name="districts_in_ho_chi_minh">
        <item>Quận 1</item>
        <item>Quận 2</item>
        <item>Quận 3</item>
        <item>Quận 4</item>
        <item>Quận 5</item>
        <item>Quận 6</item>
        <item>Quận 7</item>
        <item>Quận 8</item>
        <item>Quận 9</item>
        <item>Quận 10</item>
        <item>Quận 11</item>
        <item>Quận 12</item>
        <item>Thủ Đức</item>
        <item>Gò Vấp</item>
        <item>Bình Thạnh</item>
        <item>Tân Bình</item>
        <item>Tân Phú</item>
        <item>Phú Nhuận</item>
        <item>Bình Tân</item>
        <item>Củ Chi</item>
        <item>Hóc Môn</item>
        <item>Bình Chánh</item>
        <item>Nhà Bè</item>
        <item>Cần Giờ</item>
    </string-array>


    <string-array name="districts_in_ha_noi">
        <item>Ba Đình</item>
        <item>Hoàn Kiếm</item>
        <item>Tây Hồ</item>
        <item>Long Biên</item>
        <item>Cầu Giấy</item>
        <item>Đống Đa</item>
        <item>Hai Bà Trưng</item>
        <item>Hoàng Mai</item>
        <item>Thanh Xuân</item>
        <item>Sóc Sơn</item>
        <item>Đông Anh</item>
        <item>Gia Lâm</item>
        <item>Nam Từ Liêm</item>
        <item>Thanh Trì</item>
        <item>Bắc Từ Liêm</item>
        <item>Mê Linh</item>
        <item>Hà Đông</item>
        <item>Thị xã Sơn Tây</item>
        <item>Ba Vì</item>
        <item>Phúc Thọ</item>
        <item>Đan Phượng</item>
        <item>Hoài Đức</item>
        <item>Quốc Oai</item>
        <item>Thạch Thất</item>
        <item>Chương Mỹ</item>
        <item>Thanh Oai</item>
        <item>Thường Tín</item>
        <item>Phú Xuyên</item>
        <item>Ứng Hòa</item>
        <item>Mỹ Đức</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="your_store_location">Vị trí cửa hàng của bạn</string>
    <string name="product_information">Thông tin đơn hàng</string>
    <string name="product_name">Tên sản phẩm : </string>
    <string name="deposit">Tiền đặt cọc : </string>
    <string name="price">Tiền ship : </string>
    <string name="detail_info">Thông tin chi tiết</string>
    <string name="place_and_time">Thời gian và địa điểm </string>
    <string name="start_time">Thời gian nhận hàng : </string>
    <string name="end_time">Thời gian giao hàng : </string>
    <string name="destination">Vị trí giao hàng : </string>
    <string name="store_place">Vị trí nhận hàng : </string>
    <string name="customer_info">Thông tin khách hàng</string>
    <string name="customer_name">Anh/Chị : </string>
    <string name="customer_phone">Số điện thoại : </string>
    <string name="incorrect_information">Tài khoản hoặc mật khẩu không đúng</string>
    <string name="active_code_description">Sau khi đăng ký, bạn phải kiểm tra email để nhận mã xác thực để xác thực tài khoản của bạn.</string>
    <string name="active_account">Xác nhận tài khoản</string>
    <string name="put_your_code_hear">Điền mã xác nhận của bạn vào đây</string>
    <string name="submit">Gửi yêu cầu</string>
    <string name="incorrect_active_code">Mã xác nhận của bạn không đúng.</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="change_password_description">Vui lòng nhập email để tìm kiếm tài khoản.</string>
    <string name="put_your_email_hear">Nhập email của bạn ở đây</string>
    <string name="reset_password_notification">Chúng tôi đã gửi mã xác nhận về email của bạn, chọn tiếp tục để thực hiện việc thay đổi mật khẩu</string>
    <string name="continues">Tiếp tục</string>
    <string name="reset">Thay đổi mật khẩu</string>
    <string name="reset_code">Mã xác nhận</string>
    <string name="incorrect_reset_code">Mã xác nhận của bạn không đúng, vui lòng kiểm tra lại mã trong email của bạn</string>
    <string name="title_activity_sthome">STHomeActivity</string>
    <string name="processing_request_notification">Bạn đang thực hiện đơn hàng này</string>
    <string name="waiting_request_notification">Đang chờ xác nhận từ cửa hàng</string>
    <string name="completed_request_notification">Bạn đã hoàn thành đơn hàng này</string>
    <string name="accept">Đồng ý</string>
    <string name="find_account">Tìm tài khoản</string>


    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="create_request_successfully">Đơn hàng của bạn đã được tạo thành công!!!</string>
    <string name="logout">Đăng xuất</string>
    <string name="really_want_to_logout">Bạn có thực sự muốn thoát khỏi ứng dụng này?</string>
    <string name="upload_image">Tải hình đại diện</string>
    <string name="apply">Nhận ngay</string>
    <string name="done">Hoàn thành</string>
    <string name="finish_request">Hoàn thành đơn hàng</string>
    <string name="really_finish_request">Bạn đã hoàn thành nhiệm vụ?</string>
    <string name="sp_cancel_request">Hủy đơn hàng</string>
    <string name="really_want_to_cancel">Bạn thực sự muốn hủy đơn hàng này?</string>
    <string name="please_try_again">Đã có lỗi xảy ra, xin vui lòng thử lại.</string>
    <string name="can_not_apply_this_request">Đơn hàng này đã có người thực hiện.</string>
    <string name="waiting_for_vetification_from_store">Đang chờ xác nhận từ cửa hàng</string>
    <string name="request_is_completed">Nhiệm vụ đã hoàn thành</string>
    <string name="request_is_canceled">Đơn hàng đã bị hủy!!</string>
    <string name="waiting_for_vetification_to_be_completed_from_store">Nhiệm vụ đã hoàn thành, đang chờ xác nhận từ cửa hàng</string>
    <string name="request_is_processing">Đang thực hiện</string>
    <string name="warninng_about_judgement">Bạn sẽ bị trừ điểm đánh giá nếu bạn chọn đồng ý!!</string>
    <string name="register_account">TẠO TÀI KHOẢN MỚI</string>
    <string name="register_as">Đăng ký với tư cách</string>
    <string name="store">Store</string>
    <string name="shipper">shipper</string>
    <string name="no_shipper_accept">Chưa có shipper nào accept</string>
    <string name="shipper_require_confirm_completion">Shipper yêu cầu xác nhận hoàn thành đơn hàng này.</string>
    <string name="accept_shipper_successfully">Bạn đã chấp nhận shipper này</string>
    <string name="complete">Hoàn thành</string>
    <string name="complete_request">Hoàn thành đơn hàng.</string>
    <string name="store_and_customer_position">Địa điểm nhận hàng và giao hàng</string>
    <string name="vnd">đồng</string>
    <string name="list_order">Danh sách đơn hàng</string>
    <string name="profile_picture_content_description">Shipper</string>
    <string name="plain_text_for_preview">Shipper huy hoàng đã nhận đơn hàng của bạn</string>
    <string name="imageview_description_user_status">start</string>
    <string name="title_for_preview">Thông báo</string>
    <string name="date_for_preview">2017-01-28T01:35:00.000Z</string>
    <string name="find_your_account">Tìm kiếm tài khoản của bạn</string>
    <string name="type_reset_code">Nhập mã xác nhận ở đây</string>
    <string name="reset_password">Thay đổi mật khẩu</string>
    <string name="reset_password_successfully">Cập nhật mật khẩu thành công</string>

</resources>
