<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue"
    android:orientation="vertical"
    tools:activity="com.app.temproject.shipper.Activity.HomeActivity">
    <LinearLayout
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="50dp"
            android:text="@string/app_name"
            android:textColor="@color/red"
            android:textSize="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">
                <EditText
                    android:id="@+id/etEmail"
                    android:textStyle="italic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:text="d@gmail.com"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/tvCheckEmail"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="@color/Red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:textColor="@color/White"
                    android:id="@+id/etPassword"
                    android:textStyle="italic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="d@gmail.com"
                    android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvCheckPassword"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="@color/Red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />



            <TextView
                android:text="@string/login_as"
                android:textColor="@color/White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:theme="@style/TextLabel"
                android:id="@+id/spRole"
                android:layout_width="match_parent"
                android:layout_height="30dp">
            </Spinner>
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/White"
                android:background="@color/DodgerBlue"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/base_margin"
                android:text="@string/login"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/White"
                android:id="@+id/tvForgotPassword"
                android:text="@string/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="20sp"
                android:background="@drawable/border"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/White"
                android:layout_marginTop="10dp"
                android:id="@+id/tvRegister"
                android:text="@string/register_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
